<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".presenter.NewRequestActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hospital_hint"/>
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/blood_type"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:text="@string/save_request"
        android:textColor="@color/white"
        android:onClick="saveRequest"/>

</LinearLayout>